[CompositeAfterPaint] Update scroll animation before PrePaintTreeWalk

In pre-CompositeAfterPaint scroll animation is updated during
compositing update, and we also need to do it in CompositeAfterPaint.

This fixes CompositeAfterPaint animated scrolling.

Bug: 921194
Change-Id: I1f9baa7060f4da8ce454005492703fd48bef02c4
Reviewed-on: https://chromium-review.googlesource.com/c/1410245
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623006}
Former-commit-id: 239081c3ea84c0852b97d3bb962451b552d43d00